--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ToDoListFragment">
+    tools:context=".ui.ToDoListFragment">
 
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/todoList"
