--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -8,7 +8,7 @@
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/todoList"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:nestedScrollingEnabled="false"
     android:scrollbars="vertical"
     android:visibility="visible"/>
@@ -21,6 +21,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="40dp"
         android:visibility="gone"
+        android:backgroundTint="@color/red"
         android:src="@drawable/baseline_add_24"
         />
 
@@ -30,4 +31,17 @@
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:visibility="gone"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/noTodoFound"
+        android:layout_gravity="center"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        android:fontFamily="sans-serif-black"
+        android:gravity="center"
+        android:textSize="25sp"
+        android:text="No records found"/>
+
 </FrameLayout>
